--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,30 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+html, body{
+    color: white;
+    background-color: black;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+input{
+    color: gray;
+    font-size: 1.2rem;
+    width: 100%;
 }
+
+.card{
+    text-align: center;
+    margin: auto;
+}
+
+.card img{
+    border: 3px solid white;
+}
+
+.card div{
+    font-size: 30px;
+}
+
+ol{
+    display: block;
+}
+
